added user admin and profile

--- a/src/main/webapp/profile/profile.template.client.html
+++ b/src/main/webapp/profile/profile.template.client.html
@@ -27,10 +27,20 @@
     DOB
     <input/><br/>
     Role<br/>
-    Salary
-    <input/><br/>
+    <label>
+    <input type="checkbox"/>
+    Tenured?</label>
+
+    <br/>
+    <label for="yrlsalary">Salary</label>
+    <input id="yrlsalary"
+           min="10000"
+           max="1000000"
+           type="number"
+           placeholder="100000"
+           title="Please provide your yearly salary"/><br/>
     Email
-    <input/><br/>
+    <input placeholder="alice@wonderland.com" value="john@doe.com"/><br/>
     Phone
     <input/>
 </div>
